update vars for defaults and os specific to use user/group provided by ldap

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,8 +5,7 @@ ssl_cert_slurp_path:
 ssl_key_slurp_path:
 ssl_cert:
 ssl_key:
-ssl_certgen_directory:
-ssl_keygen_directory:
+
 
 nginx_index:
   - 'index.php'
@@ -123,41 +122,33 @@ nginx_keepalive_timeout: "300s"
 
 
 nginx_vhosts:
-  - servername: "{{ nginx_default_servername }}"
-    serveralias: "{{ ansible_default_ipv4.address }}"
-    serverlisten: "{{ nginx_http_listen }}"
+  - servername: localhost;
+    serverlisten: 80;
+    locations:
+      - name: /nginx_status
+        extra_parameters: |
+          stub_status;
+          access_log off;
+          allow 127.0.0.1;
+          deny all;
+  - servername: "home.example.com"
+    serveralias: "example.com www.home.example.com {{ ansible_eth0.ipv4.address }}"
+    serverlisten: "80 default_server"
     locations:
       - name: /
-        docroot: "/usr/share/nginx/html"
-#        extra_parameters: |
-#          fancyindex on;
+        docroot: "{{ data_mount_root }}/{{ www_directory }}"
 
 nginx_vhosts_ssl: []
-
-# SSL Vhost Example
-# nginx_vhosts_ssl:
-#   - servername: "automation.{{ www_domain }}"
-#     serverlisten: "443"
-#     ssl_certchain: "{{ vault_ssl_certchain }}"
-#     ssl_privkey: "{{ vault_ssl_privkey }}"
-#     ssl_certpath: "/etc/ssl/certs/my.crt"
-#     ssl_keypath: "/etc/ssl/certs/my.key"
-#     locations:
-#       - name: /
-#         proxy: True
-#         backend: automation
-#         extra_parameters: |
-#           proxy_http_version         1.1;
-#           proxy_set_header       Connection          "upgrade";
-#           proxy_set_header        upgrade             $http_upgrade;
-#       - name: /api/websocket
-#         proxy: True
-#         backend: automation/api/websocket
-#         extra_parameters: |
-#           proxy_http_version         1.1;
-#           proxy_set_header       Connection          "upgrade";
-#           proxy_set_header        upgrade             $http_upgrade;
-
+#  - servername: "home.example.com"
+#    serveralias: "example.com www.example.com www.home.example.com"
+#    serverlisten: "443 default_server"
+#    ssl_certchain: "{{ ssl_certchain }}"
+#    ssl_privkey: "{{ ssl_privkey }}"
+#    ssl_certpath: "{{ ssl_certpath }}"
+#    ssl_keypath: "{{ ssl_keypath }}"
+#    locations:
+#      - name: /
+#        docroot: "{{ data_mount_root }}/{{ www_directory }}"
 
 
 # The following Grok patterns can be used to parse the above-defined nginx 'main' access log format and the default fail2ban.log file
@@ -165,26 +156,6 @@ nginx_vhosts_ssl: []
 nginx_accesslog_grokpattern: '%{CLIENT:client_ip} - %{NOTSPACE:ident} \[%{HTTPDATE:ts:ts-httpd}\] %{NOTSPACE:request_host:tag} "(?:%{WORD:verb:tag} %{NOTSPACE:request} (?:HTTP/%{NUMBER:http_version:float})?|%{DATA})" %{NUMBER:resp_code:tag} (?:%{NUMBER:resp_bytes:int}|-) "%{NOTSPACE:referrer}" "%{DATA:agent:tag}" (?:%{NUMBER:request_time}|-) (?:%{NUMBER:upstream_connect_time}|-) %{NOTSPACE:x_forwarded_for} %{NOTSPACE:upstream_cache_status:tag}'
 fail2ban_banlog_grokpattern: '%{TIMESTAMP_ISO8601:timestamp} %{WORD:log_src}.%{WORD:src_action} *\[%{INT:fail2ban_digit}\]: %{WORD:loglevel:tag} *\[%{NOTSPACE:service:tag}\] %{GREEDYDATA:ban_status:tag} %{IP:clientip:tag}'
 
-# Example with Telegraf 'logparser' input configuration
-#
-#- name: logparser
-#  options:
-#    files:
-#      - "/var/log/nginx/*.log"
-#    from_beginning: "false"
-#    grok:
-#      patterns:
-#        - '{{ nginx_accesslog_grokpattern }}'
-#      measurement: nginx_access_log
-#- name: logparser
-#  options:
-#    files:
-#      - "/var/log/fail2ban.log"
-#    from_beginning: "false"
-#    grok:
-#      patterns:
-#        - '{{ fail2ban_banlog_grokpattern }}'
-#      measurement: fail2ban_log
 
 fail2ban_enable: False
 
@@ -196,9 +167,9 @@ fail2ban_socket: /var/run/fail2ban/fail2ban.sock
 fail2ban_pidfile: /var/run/fail2ban/fail2ban.pid
 fail2ban_sendername: 'Fail2ban'
 fail2ban_ignoreips:
-  - 127.0.0.1/8
-  - 10.0.0.0/8
-  - 192.168.0.0/8
+  - <network_address>/<cidr_prefix>
+  - <network_address>/<cidr_prefix>
+  - <network_address>/<cidr_prefix>
 fail2ban_bantime: 1h
 fail2ban_maxretry: 3
 fail2ban_findtime: 5m
