--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,19 +1,14 @@
 ---
-#nginx_upstream_repo: true
-#nginx_upstream_repo_baseurl: "http://nginx.org/packages"
-#nginx_upstream_repo_key: "http://nginx.org/keys/nginx_signing.key"
+nginx_upstream_repo: False
+nginx_upstream_repo_baseurl: "http://nginx.org/packages"
+nginx_upstream_repo_key: "http://nginx.org/keys/nginx_signing.key"
 
 nginx_pkgs:
   - nginx
-#  - libnginx-mod-http-fancyindex
-#  - php-fpm
 
 nginx_cfg_dir: /etc/nginx/conf.d
 nginx_default_site:
   - /etc/nginx/conf.d/default.conf
 
-nginx_user: nginx
-nginx_group: nginx
-
-nginx_ffmpeg_path: /usr/bin/ffmpeg
-
+nginx_default_user: nginx
+nginx_default_group: nginx
