--- a/tasks/enable_rtmp.yml
+++ b/tasks/enable_rtmp.yml
@@ -3,8 +3,8 @@
     - name: "create camera feed transcode directory"
       file:
         state: directory
-        owner: "{{ nginx_user }}"
-        group: "{{ nginx_group }}"
+        owner: "{{ nginx_user|default(nginx_default_user) }}"
+        group: "{{ nginx_group|default(nginx_default_group) }}"
         dest: "{{ nginx_hls_camera_feed_transcode_dir }}"
 
 #    - name: "create camera feed index file"
