--- a/tasks/http_vhosts.yml
+++ b/tasks/http_vhosts.yml
@@ -1,5 +1,5 @@
 - name: "Build NGINX vhost template"
   template:
     src: default.conf.j2
-    dest: "{{ nginx_cfg_dir }}/{{ www_domain }}"
+    dest: "{{ nginx_conf_d_dir }}/{{ www_domain }}"
   notify: "restart_nginx"
