--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -5,10 +5,8 @@ nginx_upstream_repo_key: "http://nginx.org/keys/nginx_signing.key"
 
 nginx_pkgs:
   - nginx
-
-nginx_cfg_dir: /etc/nginx/conf.d
-nginx_default_site:
-  - /etc/nginx/conf.d/default.conf
+nginx_base_cfg_dir: /etc/nginx
+nginx_conf_d_dir: "{{ nginx_base_cfg_dir }}/conf.d"
 
 nginx_default_user: nginx
 nginx_default_group: nginx
