--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -60,7 +60,7 @@ nginx_rtmp_ffmpeg_command: "{{ nginx_ffmpeg_path }} -fflags {{ nginx_fflags }}"
 nginx_ffmpeg_path: /usr/bin/ffmpeg
 nginx_module_pkgs: []
 nginx_modules_enabled: []
-
+nginx_custom_css_theme: plex
 nginx_worker_processes: "32"
 nginx_worker_connections: "1024"
 nginx_worker_rlimit_nofile: "409600"
