--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -22,3 +22,4 @@ nginx_default_site:
 nginx_default_user: www-data
 nginx_default_group: www-data
 
+nginx_systemd_location: /etc/systemd/system/nginx.service.j2
