--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -10,8 +10,4 @@ nginx_conf_d_dir: "{{ nginx_base_cfg_dir }}/conf.d"
 
 nginx_default_user: nginx
 nginx_default_group: nginx
-nginx_default_site:
-  - /etc/nginx/sites-enabled/default
-  - /etc/nginx/sites-available/default
-  - /etc/nginx/conf.d/default.conf
-  - /etc/nginx/conf.d/example_ssl.conf
+nginx_systemd_location: /etc/systemd/system/nginx.service.j2
