added redhat nginx_default_site files to be removed

--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -10,4 +10,12 @@ nginx_conf_d_dir: "{{ nginx_base_cfg_dir }}/conf.d"
 
 nginx_default_user: nginx
 nginx_default_group: nginx
+nginx_default_site:
+  - /etc/nginx/nginx.conf.default
+  - /etc/nginx/uwsgi_params.default
+  - /etc/nginx/mime.types.default
+  - /etc/nginx/fastcgi_params.default
+  - /etc/nginx/fastcgi.conf.default
+  - /etc/nginx/nginx.conf.rpmnew
+
 nginx_systemd_location: /etc/systemd/system/nginx.service.j2
