update vhost tasks to create individual files, add task to create symlinks for enabled to active vhost files

--- a/tasks/https_vhosts.yml
+++ b/tasks/https_vhosts.yml
@@ -52,10 +52,19 @@
         dest: /etc/nginx/ssl.conf
       notify: "restart_nginx"
 
-    - name: "Build NGINX SSL vhost template"
+    - name: "Build NGINX SSL vhost templates"
       template:
         src: default-ssl.conf.j2
-        dest: "{{ nginx_conf_d_dir }}/{{ www_domain }}-ssl"
+        dest: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten|regex_search('([0-9]+)') }}"
+      loop: "{{ nginx_vhosts_ssl }}"
       notify: "restart_nginx"
 
-
+    - name: "Activate vhost"
+      file:
+        src: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten|regex_search('([0-9]+)') }}"
+        dest: "{{ nginx_base_cfg_dir }}/sites-enabled/{{ item.servername }}-{{ item.serverlisten|regex_search('([0-9]+)') }}"        
+        state: link
+        owner: "{{ nginx_user|default(nginx_default_user) }}"
+        group: "{{ nginx_group|default(nginx_default_group) }}"
+      loop: "{{ nginx_vhosts_ssl }}"
+      notify: "restart_nginx"
