--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -11,6 +11,8 @@ nginx_conf_d_dir: "{{ nginx_base_cfg_dir }}/conf.d"
 nginx_default_user: nginx
 nginx_default_group: nginx
 nginx_default_site:
+  - /etc/nginx/sites-enabled/default
+  - /etc/nginx/sites-available/default
   - /etc/nginx/nginx.conf.default
   - /etc/nginx/uwsgi_params.default
   - /etc/nginx/mime.types.default
