--- a/tasks/http_vhosts.yml
+++ b/tasks/http_vhosts.yml
@@ -9,14 +9,14 @@
 - name: "Build NGINX vhost templates"
   template:
     src: default.conf.j2
-    dest: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten|regex_search('([0-9]+)')  }}"
+    dest: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten|string|regex_search('([0-9]+)') }}"
   loop: "{{ nginx_vhosts }}"
   notify: "restart_nginx"
 
 - name: "Activate vhost"
   file:
-    dest: "{{ nginx_base_cfg_dir }}/sites-enabled/{{ item.servername }}-{{ item.serverlisten|regex_search('([0-9]+)') }}"
-    src: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten|regex_search('([0-9]+)') }}"
+    dest: "{{ nginx_base_cfg_dir }}/sites-enabled/{{ item.servername }}-{{ item.serverlisten|string|regex_search('([0-9]+)') }}"
+    src: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten|string|regex_search('([0-9]+)') }}"
     state: link
     owner: "{{ nginx_user|default(nginx_default_user) }}"
     group: "{{ nginx_group|default(nginx_default_group) }}"
