--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -159,6 +159,9 @@ nginx_accesslog_grokpattern: '%{CLIENT:client_ip} - %{NOTSPACE:ident} \[%{HTTPDA
 nginx_allowed_ports:
   - "80/tcp"
   - "443/tcp"
+  - "8080/tcp"
+  - "8443/tcp"
+  - "22/tcp"
 
 nginx_symlinks: []
 
