--- a/tasks/https_vhosts.yml
+++ b/tasks/https_vhosts.yml
@@ -49,7 +49,7 @@
     - name: "Build ssl.conf template"
       template:
         src: ssl.conf.j2
-        dest: /etc/nginx/ssl.conf
+        dest: "{{ nginx_base_cfg_dir }}/ssl.conf"
       notify: "restart_nginx"
 
     - name: "Build NGINX SSL vhost templates"
