--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -14,11 +14,20 @@ nginx_pkgs:
 nginx_base_cfg_dir: /etc/nginx
 nginx_conf_d_dir: "{{ nginx_base_cfg_dir }}/conf.d"
 nginx_default_site:
-  - /etc/nginx/sites-enabled/default
-  - /etc/nginx/sites-available/default
-  - /etc/nginx/conf.d/default.conf
-  - /etc/nginx/conf.d/example_ssl.conf
+  - "{{ nginx_base_cfg_dir }}/sites-enabled/default"
+  - "{{ nginx_base_cfg_dir }}/sites-available/default"
+  - "{{ nginx_base_cfg_dir }}/conf.d/default.conf"
+  - "{{ nginx_base_cfg_dir }}/conf.d/example_ssl.conf"
+  - "{{ nginx_base_cfg_dir }}/modules-available"
+  - "{{ nginx_base_cfg_dir }}/modules-enabled"
 
+nginx_default_directories:
+  - "{{ nginx_base_cfg_dir }}/sites-enabled"
+  - "{{ nginx_base_cfg_dir }}/sites-available"
+  - "{{ nginx_base_cfg_dir }}/conf.d"
+  - "{{ nginx_base_cfg_dir }}/modules-enabled"
+  - "{{ nginx_base_cfg_dir }}/modules-available"
+  
 nginx_default_user: www-data
 nginx_default_group: www-data
 
