update vars to use unique ssl certs and paths, add loop control vars for larger tasks

--- a/tasks/http_vhosts.yml
+++ b/tasks/http_vhosts.yml
@@ -3,7 +3,11 @@
   template:
     src: default.conf.j2
     dest: "{{ nginx_base_cfg_dir }}/sites-available/{{ item.servername }}-{{ item.serverlisten|string|regex_search('([0-9]+)') }}"
+    owner: "{{ nginx_user|default(nginx_default_user) }}"
+    group: "{{ nginx_group|default(nginx_default_group) }}"
   loop: "{{ nginx_vhosts }}"
+  loop_control:
+    label: "{{ item.servername }}"
   notify: "restart_nginx"
 
 - name: "Activate vhost"
@@ -14,4 +18,6 @@
     owner: "{{ nginx_user|default(nginx_default_user) }}"
     group: "{{ nginx_group|default(nginx_default_group) }}"
   loop: "{{ nginx_vhosts }}"
+  loop_control:
+    label: "{{ item.servername }}"
   notify: "restart_nginx"
